--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,16 +21,16 @@ requirements:
     - pip
     - python >=3.6
   run:
-    - addict >=2.2.1
+    - addict >=2.4.0
     - aiofiles
-    - demjson3
-    - httpx >=0.11.0
-    - itsdangerous >=1.1.0
-    - jinja2 >=2.10.1
+    - demjson3 >=3.0.5
+    - httpx >=0.23.0
+    - itsdangerous >=2.1.2
+    - jinja2 >=3.1.2
     - python >=3.6
-    - starlette >=0.12.0
+    - starlette >=0.20.4
     - twine
-    - uvicorn >=0.7.1
+    - uvicorn >=0.18.3
     - websockets
     - wheel
 
