--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "justpy" %}
-{% set version = "0.4.3" %}
+{% set version = "0.5.6" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/justpy-{{ version }}.tar.gz
-  sha256: 6352e37b9d22ff494656a99ab4ca5be2f9a988cfab0aa0d703a6a440575e1cca
+  sha256: 822d36528a0203e07594e7fcd64b51e5057f90fccd4e987e35a2c083fe6bc0a2
 
 
 build:
@@ -17,9 +17,9 @@ build:
 
 requirements:
   host:
-    - flit
+    - flit >=3.2,<4
     - pip
-    - python >=3.6
+    - python >=3.7
   run:
     - addict >=2.4.0
     - aiofiles
@@ -27,7 +27,7 @@ requirements:
     - httpx >=0.23.0
     - itsdangerous >=2.1.2
     - jinja2 >=3.1.2
-    - python >=3.6
+    - python >=3.7
     - starlette >=0.20.4
     - twine
     - uvicorn >=0.18.3
@@ -47,7 +47,7 @@ about:
   summary: JustPy is an object-oriented, component based, high-level Python Web Framework that requires no front-end programming
   license: Apache-2.0
   license_file: LICENSE
-  dev_url: https://github.com/elimintz/justpy
+  dev_url: https://github.com/justpy-org/justpy
 
 extra:
   recipe-maintainers:
